--- a/src/app/shared/components/display-modal/display-modal.component.html
+++ b/src/app/shared/components/display-modal/display-modal.component.html
@@ -36,5 +36,9 @@
     <h2>Team Members</h2>
     <p *ngFor="let member of data.item.members">{{member.name}}</p>
   </div>
-  <shared-did-display *ngIf="data.path === 'cast'" [daysOff]="data.item.days"></shared-did-display>
+  <shared-did-display
+    [teamMembers]="data.item.members"
+    [daysOff]="daysOffArray"
+    [type]="data.path"
+    [teamMemberCount]="teamMemberCount"></shared-did-display>
 </div>
