--- a/src/app/shared/components/display-modal/display-modal.component.html
+++ b/src/app/shared/components/display-modal/display-modal.component.html
@@ -34,7 +34,11 @@
   </div>
   <div class="members" *ngIf="data.path === 'teams'">
     <h2>Team Members</h2>
-    <p *ngFor="let member of data.item.members">{{member.name}}</p>
+    <div *ngFor="let member of data.item.members" class="team-member">
+      <p>{{member.name}}<small class="italics-subtitle"><br/>Time Off:</small></p>
+      <shared-pto-display [daysOff]="member.days"></shared-pto-display>
+      <hr/>
+    </div>
   </div>
   <shared-did-display
     [teamMembers]="data.item.members"
