--- a/src/app/shared/components/pto-display/pto-display.component.css
+++ b/src/app/shared/components/pto-display/pto-display.component.css
@@ -7,3 +7,17 @@
     justify-content: space-evenly;
     width: 100%;
 }
+h2 {
+    font-size: 1.75rem;
+    font-weight: 600;
+}
+p {
+    font-size: 1.25rem;
+}
+.italics-subtitle {
+    font-size: 0.75rem;
+    font-style: italic;
+}
+.team-member {
+    padding-bottom: 0.5rem;
+}
