begins adding non-graded list to admin console

--- a/src/app/admin/components/team-form/team-form.component.html
+++ b/src/app/admin/components/team-form/team-form.component.html
@@ -10,6 +10,7 @@
     <input class="text-input" id="photo" name="photo" placeholder={{admin.activeTeam.photo}}
     required="!edit" minlength="4" [(ngModel)]="photo" (ngModelChange)="photo=$event">
   </div>
+  <admin-non-graded-list></admin-non-graded-list>
   <div class="button-container">
     <button (click)="showName()">Submit</button>
   </div>
