--- a/src/app/shared/components/display-modal/display-modal.component.html
+++ b/src/app/shared/components/display-modal/display-modal.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="top-row">
     <div class="image-container">
-      <img src={{data.item.photo}} />
+      <img src={{data.item.photo}} id="face-photo" />
     </div>
     <div class="basic-info">
       <h1>{{data.item.name}}<br>
